// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`given AsyncAPI definition with no empty values should do nothing 1`] = `
(AsyncApi2Element
  (MemberElement
    (StringElement)
    (AsyncApiVersionElement))
  (MemberElement
    (StringElement)
    (IdentifierElement)))
`;

exports[`given empty value instead for AsyncAPI.components.schemas should replace empty value with semantic element 1`] = `
(AsyncApi2Element
  (MemberElement
    (StringElement)
    (AsyncApiVersionElement))
  (MemberElement
    (StringElement)
    (ComponentsElement
      (MemberElement
        (StringElement)
        (ObjectElement)))))
`;

exports[`given empty value instead for AsyncAPI.components.schemas.* should replace empty value with semantic element 1`] = `
(AsyncApi2Element
  (MemberElement
    (StringElement)
    (AsyncApiVersionElement))
  (MemberElement
    (StringElement)
    (ComponentsElement
      (MemberElement
        (StringElement)
        (ObjectElement
          (MemberElement
            (StringElement)
            (SchemaElement)))))))
`;

exports[`given empty value instead of ContactElement should replace empty value with semantic element 1`] = `
(AsyncApi2Element
  (MemberElement
    (StringElement)
    (AsyncApiVersionElement))
  (MemberElement
    (StringElement)
    (InfoElement
      (MemberElement
        (StringElement)
        (ContactElement)))))
`;

exports[`given empty value instead of InfoElement should replace empty value with semantic element 1`] = `
(AsyncApi2Element
  (MemberElement
    (StringElement)
    (AsyncApiVersionElement))
  (MemberElement
    (StringElement)
    (InfoElement)))
`;
